--- a/index.css
+++ b/index.css
@@ -46,6 +46,12 @@ body>div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    padding-left: 15px;
+    padding-top: 15px;
+
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 body>div div {
