--- a/index.css
+++ b/index.css
@@ -49,13 +49,19 @@ body>div {
 
     padding-left: 15px;
     padding-top: 15px;
+    padding-right: 15px;
 
     font-size: 20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-body>div div {
+.menu_post_it {
     align-self: flex-end;
     font-size: 20px;
+}
+
+.fas, .far {
+
     padding: 0 3px;
+
 }
