--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 #barre_gauche {
     display: inline-block;
     width: 20%;
-    background-color: #E7EAED;
+    background-color: #ebebeb;
     height: 957px;
 }
 
@@ -53,6 +53,8 @@ body>div {
 
     font-size: 20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+    overflow-wrap: break-word;
 }
 
 .menu_post_it {
@@ -62,6 +64,6 @@ body>div {
 
 .fas, .far {
 
-    padding: 0 3px;
+    padding: 5px 3px;
 
 }
